--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -27,7 +27,7 @@
     </div>
   </div>
   <div class="row">
-    <div class="col-4" *ngFor="let team of selectedTeamsArr">
+    <div class="col-md-4" *ngFor="let team of selectedTeamsArr">
       <app-team-card [team]="team" (removeTeam)="removeTeam($event)"></app-team-card>
     </div>
   </div>
